--- a/about.html
+++ b/about.html
@@ -110,12 +110,10 @@
 <section id="about-section" class="about-section section theme-bg-light">
   <div class="container">
     <h3 class="section-heading text-center mb-3">About <img width="280px" style="margin-top: -35px;" src="/assets/images/lanscape-logo-purple.png" alt="img" ></h3>
-    <div class="section-intro single-col-max mx-auto mb-4">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.
+    <div class="section-intro single-col-max mx-auto mb-4 text-center">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.
       <br> <br>
       ElixirKenya brings you the first of many editions of Elixir Conference Africa. <br>
       This conference will be held virtually and is open to anyone from anywhere around the world, the event will incorporate among other things, technical and non technical talks, with the main focus being how Elixir has been used to craft technological solutions aimed at addressing problems and issues within and outside of Africa.
-      <br><br>
-      The symposium will be presented on a terrace that fixates on communal synergies and allows everyone to relate online in one place, from attendee to speaker to sponsor as well as a trainer.
       <br><br>
       ElixConfAfr will be held at Greenwich Meridian Time (GMT) to suit attendees all over Africa for a two-day event filled with display of talks and workshops from amazing speakers and teachers.
     </div>
@@ -131,12 +129,12 @@
     <div class="row">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/sigu.jpg" class="card-img-top rounded-0" alt="logo"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/sigu.jpg" class="card-img-top rounded-0" alt="lead conference organier" style="object-fit: cover;"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Sigu Magwa</h5>
             <div class="card-text mb-3">
-              <div class="meta">CTO && Senior Software Developer</div>
-              <div class="meta">Podii Consultants Ltd.</div>
+              <div class="meta">Lead Conference Organiser</div>
+              <div class="meta">Sponsorship Manager</div>
             </div><!--//card-text-->
           </div><!--//card-->
           <div class="card-footer text-muted">
@@ -150,12 +148,12 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/chantelle.JPG" class="card-img-top rounded-0" alt="logo"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/chantelle.JPG" class="card-img-top rounded-0 " alt="logo" style="object-fit: cover;"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Chantelle Kyendereta</h5>
             <div class="card-text mb-3">
-              <div class="meta">UI/UX Developer</div>
-              <div class="meta">Podii Consultants Ltd.</div>
+              <div class="meta">Creative Director</div>
+              <div class="meta">Co-director</div>
             </div><!--//card-text-->
           </div><!--//card-->
           <div class="card-footer text-muted">
@@ -169,12 +167,12 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/mush.jpg" class="card-img-top rounded-0" alt="logo"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/mush.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Collins Mucheru</h5>
             <div class="card-text mb-3">
-              <div class="meta">FullStack / DevOps engineer, Technical Lead</div>
-              <div class="meta">Qhala</div>
+              <div class="meta">IT Support</div>
+              <div class="meta">Conference Coach</div>
             </div><!--//card-text-->
           </div><!--//card-->
           <div class="card-footer text-muted">
@@ -188,12 +186,12 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/wanjiku.jpg" class="card-img-top rounded-0" alt="logo"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/wanjiku.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Wanjiku Macharia</h5>
             <div class="card-text mb-3">
-              <div class="meta">Precision Development </div>
-              <div class="meta">Startup Week</div>
+              <div class="meta">IT Support</div>
+              <div class="meta">Time Keeper</div>
             </div><!--//card-text-->
           </div><!--//card-->
           <div class="card-footer text-muted">
@@ -207,12 +205,12 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/okoth.jpg" class="card-img-top rounded-0" alt="logo"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/okoth.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Okoth Kong'o</h5>
             <div class="card-text mb-3">
-              <div class="meta">Software Developer</div>
-              <div class="meta"></div>
+              <div class="meta">IT Support</div>
+              <div class="meta">Attendees' Manager</div>
             </div><!--//card-text-->
           </div><!--//card-->
           <div class="card-footer text-muted">
@@ -226,12 +224,12 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/tracey.jpg" class="card-img-top rounded-0" alt="logo"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/20200817_093052 - Tracey Onim.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Tracey Onim</h5>
             <div class="card-text mb-3">
-              <div class="meta">Software Engineer</div>
-              <div class="meta">Podii Consultants Ltd</div>
+              <div class="meta">Speakers' Manager</div>
+              <div class="meta">Session Moderator</div>
             </div><!--//card-text-->
           </div><!--//card-->
           <div class="card-footer text-muted">
@@ -245,12 +243,12 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/njoki.jpg" class="card-img-top rounded-0" alt="logo"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/njoki.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Njoki Kiarie</h5>
             <div class="card-text mb-3">
-              <div class="meta">Software Developer</div>
-              <div class="meta">Qhala</div>
+              <div class="meta">Attendees' Manager</div>
+              <div class="meta">Speakers' Manager</div>
             </div><!--//card-text-->
           </div><!--//card-->
           <div class="card-footer text-muted">
@@ -264,12 +262,12 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/pops.jpg" class="card-img-top rounded-0" alt="logo"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/pops.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Pollet Obuya</h5>
             <div class="card-text mb-3">
-              <div class="meta">Lead Developer</div>
-              <div class="meta">Podii Consultants Ltd.</div>
+              <div class="meta">IT Support</div>
+              <div class="meta">Attendees' Manager</div>
             </div><!--//card-text-->
           </div><!--//card-->
           <div class="card-footer text-muted">
@@ -282,11 +280,89 @@
         </div><!--//card-->
       </div><!--//col-->
     </div><!--//row-->
+    <div class="row">
+    <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <div class="card rounded-0">
+        <div class="speaker-img"><img src="assets/images/organisers/Snapchat-195934044 - Getty Orawo.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="card-body">
+          <h5 class="card-title mb-2">Getty Orawo</h5>
+          <div class="card-text mb-3">
+            <div class="meta">Creative Director</div>
+            <div class="meta">Co-director</div>
+          </div><!--//card-text-->
+        </div><!--//card-->
+        <div class="card-footer text-muted">
+          <ul class="social-list list-inline mb-0">
+            <li class="list-inline-item"><a  href="https://mobile.twitter.com/gettyorawo"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a  href="https://www.linkedin.com/in/gettyorawo"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a  href="https://github.com/gettyorawo"><i class="fab fa-github fa-fw"></i></a></li>
+          </ul><!--//social-list-->
+        </div>
+      </div><!--//card-->
+    </div><!--//col-->
+    <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <div class="card rounded-0">
+        <div class="speaker-img"><img src="assets/images/organisers/IMG_1607 - Ruyonga Dan.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="card-body">
+          <h5 class="card-title mb-2">Ruyonga Daniel</h5>
+          <div class="card-text mb-3">
+            <div class="meta">Sponsors. Manager</div>
+            <div class="meta">Speakers' Manager</div>
+          </div><!--//card-text-->
+        </div><!--//card-->
+        <div class="card-footer text-muted">
+          <ul class="social-list list-inline mb-0">
+            <li class="list-inline-item"><a  href="https://mobile.twitter.com/ruyonga"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a  href="https://www.linkedin.com/in/ruyongadaniel/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a  href="https://github.com/ruyonga"><i class="fab fa-github fa-fw"></i></a></li>
+          </ul><!--//social-list-->
+        </div>
+      </div><!--//card-->
+    </div><!--//col-->
+    <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <div class="card rounded-0">
+        <div class="speaker-img"><img src="assets/images/organisers/IMG_20200207_123840 - Magak Emmanuel.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="card-body">
+          <h5 class="card-title mb-2">Magak Emmanuel</h5>
+          <div class="card-text mb-3">
+            <div class="meta">Creative Director</div>
+            <div class="meta"></div>
+          </div><!--//card-text-->
+        </div><!--//card-->
+        <div class="card-footer text-muted">
+          <ul class="social-list list-inline mb-0">
+            <li class="list-inline-item"><a  href="https://mobile.twitter.com/emeshmagak"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a  href="https://www.linkedin.com/in/manuelgeek"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a  href="https://github.com/manuelgeek"><i class="fab fa-github fa-fw"></i></a></li>
+          </ul><!--//social-list-->
+        </div>
+      </div><!--//card-->
+    </div><!--//col-->
+    <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <div class="card rounded-0">
+        <div class="speaker-img"><img src="assets/images/organisers/imo - Imo Inyang.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="card-body">
+          <h5 class="card-title mb-2">Imo Inyang</h5>
+          <div class="card-text mb-3">
+            <div class="meta">Conference Moderator</div>
+            <div class="meta">Speakers' Manager</div>
+          </div><!--//card-text-->
+        </div><!--//card-->
+        <div class="card-footer text-muted">
+          <ul class="social-list list-inline mb-0">
+            <li class="list-inline-item"><a  href="https://mobile.twitter.com/reimoinyang"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a  href="https://www.linkedin.com/in/imoinyang"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a  href="https://github.com/reimo"><i class="fab fa-github fa-fw"></i></a></li>
+          </ul><!--//social-list-->
+        </div>
+      </div><!--//card-->
+    </div><!--//col-->
+  </div><!--row-->
   </div><!--//container-->
 
 </section>
 
-<section id="sponsors-section" class="sponsors-section section">
+<!-- <section id="sponsors-section" class="sponsors-section section">
   <div class="container">
     <h3 class="section-heading text-center mb-3">Organizers</h3>
     <div class="section-intro text-center single-col-max mx-auto mb-5">Comapnies Organizing</div>
@@ -305,7 +381,7 @@
       <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-12.svg" alt="logo"></div>
     </div><!--//row-->
   </div><!--//container-->
-</section><!--//sponsors-section-->
+<!-- </section> //sponsors-section --> 
 
 <footer class="footer py-5 theme-bg-primary">
   <div class="container text-center">
