--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 				<div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/podiilogo.png" alt="logos"></div>
 
 			</div><!--//row-->
-			<div class="sponsors-cta text-center pt-5"><a class="btn-primary btn btn-lg" href="mailto:support.elixirconf.africa">Become A Sponsor</a></div>
+			<div class="sponsors-cta text-center pt-5"><a class="btn-primary btn btn-lg" href="mailto:jambo@elixirconf.africa">Become A Sponsor</a></div>
 		</div><!--//container-->
 	</section><!--//sponsors-section-->
 
