--- a/about.html
+++ b/about.html
@@ -86,8 +86,8 @@
           <ul class="nav navbar-nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
-            <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
+<!--            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>-->
             <li class="nav-item"><a class="nav-link scrollto" href="/#tickets-section">Tickets</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#sponsors-section">Sponsors</a></li>
           </ul><!--//nav-->
@@ -381,7 +381,7 @@
       <div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/logo-12.svg" alt="logo"></div>
     </div><!--//row-->
   </div><!--//container-->
-<!-- </section> //sponsors-section --> 
+<!-- </section> //sponsors-section -->
 
 <footer class="footer py-5 theme-bg-primary">
   <div class="container text-center">
