--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 						<ul class="nav navbar-nav">
 
 							<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>
-							<li class="nav-item"><a class="nav-link" href="#">Schedule</a></li>
+							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+<!--							<li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>-->
+<!--							<li class="nav-item"><a class="nav-link" href="#">Schedule</a></li>-->
 							<li class="nav-item"><a class="nav-link scrollto" href="#tickets-section">Tickets</a></li>
 							<li class="nav-item"><a class="nav-link scrollto" href="#sponsors-section">Sponsors</a></li>
 						</ul><!--//nav-->
@@ -142,7 +142,7 @@
 			<div class="about-cta text-center mb-5"><a class="btn btn-secondary btn-lg  mb-5" href="about.html">Read More</a></div>
 		</div><!--//container-->
 
-		
+
 	</section><!--//about-section-->
 
 	<section id="tickets-section" class="tickets-section section theme-bg-light">
