--- a/schedule.html
+++ b/schedule.html
@@ -86,8 +86,8 @@
           <ul class="nav navbar-nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
-            <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>
+<!--            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>-->
+<!--            <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>-->
             <li class="nav-item"><a class="nav-link scrollto" href="/#tickets-section">Tickets</a></li>
             <li class="nav-item"><a class="nav-link scrollto" href="/#sponsors-section">Sponsors</a></li>
           </ul><!--//nav-->
