--- a/index.html
+++ b/index.html
@@ -141,6 +141,93 @@
 		</div><!--//container-->
 	</section><!--//about-section-->
 
+<section id="speakers-section" class="speakers-section section">
+  <div class="container">
+    <h3 class="section-heading text-center mb-3">Keynote Speakers</h3>
+    <div class="section-intro text-center single-col-max mx-auto mb-5">Here are the amazing keynote speakers for ElixirConf Africa</div>
+    <div class="row">
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <div class="card rounded-0">
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="https://dashbit.co/images/team/JV-6c0d230edc6596281e81c03aa56cfc7b.jpg?vsn=d" class="card-img-top rounded-0" alt="logo"></a>
+          <div class="card-body">
+            <h5 class="card-title mb-2">Jose Valim</h5>
+            <div class="card-text mb-3">
+              <div class="meta"> Creator of Elixir and Plug </div>
+              <div class="meta"> Member of Ecto, ExDoc, and Phoenix teams </div>
+            </div><!--//card-text-->
+            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+          </div><!--//card-->
+          <div class="card-footer text-muted">
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div>
+        </div><!--//card-->
+      </div><!--//col-->
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <div class="card rounded-0">
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/bruce-brown-black.jpg" class="card-img-top rounded-0" alt="logo"></a>
+          <div class="card-body">
+            <h5 class="card-title mb-2">Bruce Tate</h5>
+            <div class="card-text mb-3">
+              <div class="meta">Founder: http://grox.io </div>
+              <div class="meta">OTP+LiveView training; books and vids for Julia and Elixir.
+                Author  Languages in 7 wks, Programming Phoenix LiveView, others.</div>
+            </div><!--//card-text-->
+            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+          </div><!--//card-->
+          <div class="card-footer text-muted">
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div>
+        </div><!--//card-->
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <div class="card rounded-0">
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Francesco_Cesarini.jpeg" class="card-img-top rounded-0" alt="logo"></a>
+          <div class="card-body">
+            <h5 class="card-title mb-2">Francesco Cesarini</h5>
+            <div class="card-text mb-3">
+              <div class="meta">Founder & Technical Director @ Erlang Solutions, O'Reilly Author</div>
+            </div><!--//card-text-->
+            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+          </div><!--//card-->
+          <div class="card-footer text-muted">
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div>
+        </div><!--//card-->
+      </div>
+      <div class="col-12 col-md-6 col-lg-3 mb-4">
+        <div class="card rounded-0">
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Simon_Thompson.jpg" class="card-img-top rounded-0" alt="logo"></a>
+          <div class="card-body">
+            <h5 class="card-title mb-2">Simon Thompson</h5>
+            <div class="card-text mb-3">
+              <div class="meta">Researcher, author and teacher</div>
+            </div><!--//card-text-->
+            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+          </div><!--//card-->
+          <div class="card-footer text-muted">
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div>
+        </div><!--//card-->
+      </div><!--//col-->
+    </div>
+  </div>
+</section>
 	<section id="sponsors-section" class="sponsors-section section">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">Sponsors</h3>
